# rand_char

./: Cargo.toml  README.md  build.rs
completions/: _rand_char  rand_char.bash  rand_char.fish
src/: cli.rs  error.rs  generate.rs  lib.rs  main.rs  test.rs
