[package]
name = "rand_char"
version = "0.1.6"
edition = "2021"
authors = ["sakunia <sakunia@foxmail.com>"]
readme = "README.md"
license = "MIT"
description = "Randomly generate fixed-length strings"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
console = "0.15.5"
dialoguer = "0.10.3"
rand = "0.8.5"
thiserror = "1.0.39"

[build-dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.4"

[profile.release]
lto = true
strip = true
